[package]
name = "reddit-api"
version = "0.1.0"
edition = "2021"
authors = ["Mauro M. <24578415+Bocanada@users.noreply.github.com>"]

[lib]
path = "src/lib.rs"
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.164", default-features = false, features = ["derive"] }
serde_json = "1.0.97"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["sync", "rt-multi-thread"] }
url = { version = "2.4.0", features = ["serde"] }

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1.28.2", features = ["sync", "rt-multi-thread", "macros"] }


[features]
shared_auth = []
