[package]
name = "reddit-api"
version = "0.2.0"
edition = "2021"
authors = ["Mauro M. <24578415+Bocanada@users.noreply.github.com>"]
repository = "https://github.com/bocanada/reddit-api"

[lib]
path = "src/lib.rs"
# doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3.28", features = ["alloc"], optional = true, default-features = false }
reqwest = { version = "0.11.18", default-features = false, features = ["json"] }
serde = { version = "1.0.164", default-features = false, features = ["derive"] }
serde_json = "1.0.97"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["sync", "rt-multi-thread"] }
tracing = { version = "0.1.37", features = ["log"] }
url = { version = "2.4.0", features = ["serde"] }
nanorand = { version = "0.7.0", default-features = false, features = ["tls"], optional = true }

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1.28.2", features = ["sync", "rt-multi-thread", "macros"] }


[features]
default = ["reqwest/default-tls"]
stream = ["dep:futures-util", "dep:nanorand", "shared_auth"]
rustls = ["reqwest/rustls-tls"]
shared_auth = []
